# python-project-83

./: .gitignore  Makefile  README.md  database.sql  page_analyzer.py  pyproject.toml
.github/workflows/: linter-check.yml
page_analyzer/: app.py  db_module.py  url_analisys_repository.py  url_repository.py  validator.py
page_analyzer/templates/: index.html  layout.html  page.html
page_analyzer/templates/urls/: id_info.html  not_found.html  show_urls.html
