[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page_analyzer (project 3 on hexlet)"
authors = ["Work Chachimin <chachimin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
gunicorn = "^23.0.0"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
